--- a/src/assets/Map.css
+++ b/src/assets/Map.css
@@ -1,20 +1,19 @@
 .map-container {
-    /* position: absolute; */
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
-  
-  .sidebarStyle {
-    display: inline-block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 12px;
-    background-color: #404040;
-    color: #ffffff;
-    z-index: 1 !important;
-    padding: 6px;
-    font-weight: bold;
-  }
+  width: 100%; /* Ensure the map takes the full width of its container */
+  height: 500px; /* Set a fixed height for the map */
+  margin-top: 16px; /* Add some space between the DataGrid and the map */
+  position: relative; /* Change position to relative to avoid overlapping */
+}
+
+.sidebarStyle {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 12px;
+  background-color: #404040;
+  color: #ffffff;
+  z-index: 1;
+  padding: 6px;
+  font-weight: bold;
+}
