--- a/src/assets/NavBar.css
+++ b/src/assets/NavBar.css
@@ -29,7 +29,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     padding: 20px;
     transition: all 0.4s ease;
     background-color: #f8f9fa;
