--- a/src/assets/Marker.css
+++ b/src/assets/Marker.css
@@ -1,13 +1,25 @@
 .marker {
     width: 30px;
     height: 30px;
-    background-color: #3FB1CE;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     border-radius: 50%;
-    font-size: 16px;
+    border: 4px solid transparent; /* Default border color */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 14px;
     font-weight: bold;
-    cursor: pointer;
+    text-align: center;
+}
+
+.delivered {
+    background-color: #379e34;
+}
+
+.delayed {
+    background-color: #b31746;
+}
+
+.default {
+    background-color: #e0983a;
 }
