changed to button, started experimenting with colour changes

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --background-colour: #819BC5;
+  --background-colour: #B7C8E1;
   --highlight-colour: #f7d1cd;
   --action-colour: #582c4d;
   --secondary-colour: #e6e8ef;
